src/snapshots/cornercase__ui__tests__overlay__renders_a_form_error.snap
---
source: src/ui.rs
expression: render(&v).backend()
---
" ▄▀▀▀ cornercase                                         │                                          "
" █                                                       │                                          "
"                                                         │                                          "
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                  ┌ new worktree ────────────────────────────────────────────────┐                  "
" projects         │ branch                                                       │                  "
"                  │ › feat/login                                                 │                  "
"▌ cornercase (1)  │ in ~/.cornercase/worktrees/cornercase/feat-login             │                  "
"                  │                                                              │                  "
"  + new project   │ a branch named 'feat/login' already exists                   │                  "
"                  │                                                              │                  "
"                  │                                                              │                  "
"                  │                                             create   cancel  │                  "
"                  └──────────────────────────────────────────────────────────────┘                  "
"                               │                         │                                          "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  quit                         │                         │                                          "
