src/snapshots/cornercase__ui__tests__overlay__renders_the_menu_where_it_was_opened.snap
---
source: src/ui.rs
expression: render(&v).backend()
---
" ▄▀▀▀ cornercase                                         │                                          "
" █                                                       │                                          "
"                                                         │                                          "
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" pro┌──────────────┐           │ workspaces              │                                          "
"    │ new worktree │           │                         │                                          "
"▌ co└──────────────┘           │                         │                                          "
"                               │                         │                                          "
"  + new project                │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  usage                        │                         │                                          "
"  quit                         │                         │                                          "
